# clash-web-app

./: README.md  cwa push.bat  cwa.bat  install winsw.bat  push cwa.bat  run clash.bat  run cwa.bat  run subconvert.bat  run_windows_terminal.bat  stop cwa.bat  uninstall winsw.bat
python_script/: download_sub.py  loop_update.py  pyproject.toml  requirements.txt
winsw_config/: clash_control.xml  clash_yacd.xml  download_sub.xml  loop_update.xml  run_clash.xml  subcovert.xml
